# librequest

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  header.c  header.h  libreq.h  request.h  res.h  test.c  universal.sh
darwin/: request.m
include/: header.h  request.h  res.h
src/main/: header.c  request_generic.c  res.c  test.c
src/main/backends/curl/: request.c
src/main/backends/darwin/: request.m
src/main/backends/qt/: request.cpp
src/main/backends/raw/: request.cpp  request_posix.cpp  request_win32.cpp
src/main/backends/win32/: request.cpp
src/main/backends/win32/librequest/: librequest.sln
src/main/backends/win32/librequest/librequest/: request.cpp  request.h  res.h
src/main/backends/win32/librequest/librequest/Release/: BuildLog.htm  mt.dep  vc80.idb
src/main/backends/win32/librequest/release/: librequest.exp  librequest.lib
win32/: request.cpp
win32/librequest/librequest/: ReadMe.txt  librequest.vcproj  request.cpp  res.c
